src/components/button/dependencies/style/themes.css
.dyvix-button-singularity {
  background: radial-gradient(circle, #000000 0%, #1a1a1a 100%);
  box-shadow: 0 0 30px #b903e2;
  -webkit-box-shadow: 0 0 30px #b903e2;
  -moz-box-shadow: 0 0 30px #b903e2;
  border: #450343 3px double;
  border-radius: 10rem;
  transition: all 0.3s ease-in-out;
}
.dyvix-button-singularity:hover {
  border: #000000 3px double;
  transform: scale(1.09);
}
.dyvix-button-singularity:active {
  border: #000000 5px double;
  transform: scale(1.09);
}
.dyvix-button-industrial {
  font-family: 'Geist';
  border: 4px solid #374151;
  border-radius: 10px;
  background-color: #0a1429;
  padding: 0.6rem;
  transition:
    box-shadow ease-in-out 0.6s,
    border-color ease-in-out 0.3s,
    background-color ease-in-out 0.2s,
    transform ease-in-out 0.1s,
    border-radius ease-in-out 0.4s;
}
.dyvix-button-industrial:hover {
  border-color: #6a6a6a;
  box-shadow:
    inset 0 0 30px rgba(106, 106, 106, 0.1),
    0 0 20px rgba(106, 106, 106, 0.15);
  background-color: #101f39;
  transform: scale(1.05);
  border-radius: 13px;
}
.dyvix-button-industrial:active {
  border-color: #080808;
  box-shadow:
    inset 0 0 30px rgba(120, 110, 110, 0.1),
    0 0 30px rgba(106, 106, 106, 0.15);
  background-color: #101f39;
  transform: scale(0.9);
  border-radius: 5px;
}
.dyvix-button-ember {
  border-radius: 10px;
  background-color: #0f0a08;
  border-bottom: #ff4500 3px solid;
  box-shadow:
    0px 17px 12px -12px rgba(255, 69, 0, 0.73),
    0px 0px 30px -10px rgba(255, 69, 0, 0.3);
  -webkit-box-shadow:
    0px 17px 12px -12px rgba(255, 69, 0, 0.73),
    0px 0px 30px -10px rgba(255, 69, 0, 0.3);
  -moz-box-shadow:
    0px 17px 12px -12px rgba(255, 69, 0, 0.73),
    0px 0px 30px -10px rgba(255, 69, 0, 0.3);
  transition:
    transform 0.5s ease-in-out,
    0.4s ease-in-out,
    box-shadow 0.3s ease-in-out,
    -webkit-box-shadow 0.3s ease-in-out,
    -moz-box-shadow 0.3s ease-in-out;
}
.dyvix-button-ember:hover {
  border-bottom: #ff6b00 3.1px solid;
  transform: scale(1.002);
  box-shadow:
    0px 17px 20px -12px rgba(255, 69, 0, 0.9),
    0px 0px 40px -5px rgba(255, 69, 0, 0.5);
  -webkit-box-shadow:
    0px 17px 20px -12px rgba(255, 69, 0, 0.9),
    0px 0px 40px -5px rgba(255, 69, 0, 0.5);
  -moz-box-shadow:
    0px 17px 20px -12px rgba(255, 69, 0, 0.9),
    0px 0px 40px -5px rgba(255, 69, 0, 0.5);
}
.dyvix-button-ember:active {
  border-bottom: #3c200d 2px solid;
  transform: scale(0.9);
  box-shadow:
    0px 17px 20px -12px rgba(255, 69, 0, 0.9),
    0px 0px 40px -5px rgba(255, 69, 0, 0.5);
  -webkit-box-shadow:
    0px 17px 20px -12px rgba(255, 69, 0, 0.9),
    0px 0px 40px -5px rgba(255, 69, 0, 0.5);
  -moz-box-shadow:
    0px 17px 20px -12px rgba(255, 69, 0, 0.9),
    0px 0px 40px -5px rgba(255, 69, 0, 0.5);
}
.dyvix-button-frost {
  background-color: #ffffff1a;
  border: 5px groove #ffffff40;
  border-radius: 20px;
  backdrop-filter: blur(50px);
  box-shadow: -6px 2px 51px -7px rgba(213, 255, 248, 1) inset;
  -webkit-box-shadow: -6px 2px 51px -7px rgba(213, 255, 248, 1) inset;
  -moz-box-shadow: -6px 2px 51px -7px rgba(213, 255, 248, 1) inset;
  transition:
    transform 0.5s ease-in-out,
    box-shadow 0.3s ease-in-out,
    -webkit-box-shadow 0.3s ease-in-out,
    -moz-box-shadow 0.3s ease-in-out,
    border 0.2s ease-in-out;
}
.dyvix-button-frost:hover {
  border: 6px groove #f8f8f840;
  transform: scale(1.07);
  box-shadow: -6px 2px 51px -23px rgba(213, 255, 248, 1) inset;
  -webkit-box-shadow: -6px 2px 51px -23px rgba(213, 255, 248, 1) inset;
  -moz-box-shadow: -6px 2px 51px -23px rgba(213, 255, 248, 1) inset;
}
.dyvix-button-frost:active {
  border: 2px groove #f8f8f840;
  transform: scale(0.95);
  box-shadow: -6px 2px 51px -13px rgb(172, 242, 230) inset;
  -webkit-box-shadow: -6px 2px 51px -13px rgb(172, 242, 230) inset;
  -moz-box-shadow: -6px 2px 51px -13px rgb(172, 242, 230) inset;
}
.dyvix-button-blade {
  background-color: #0a0a0a;
  border-radius: 0px;
  border-left: 3px solid #e2e8f0;
  border-top: 3px solid #e2e8f0;
  border-right: 1px solid #ffffff20;
  border-bottom: 1px solid #ffffff20;
  box-shadow: -4px -4px 20px rgba(255, 255, 255, 0.05);
  -webkit-box-shadow: -4px -4px 20px rgba(255, 255, 255, 0.05);
  -moz-box-shadow: -4px -4px 20px rgba(255, 255, 255, 0.05);
  transition:
    border-left 0.1s ease-in-out,
    border-top 0.1s ease-in-out,
    box-shadow 0.2s ease-in-out,
    -webkit-box-shadow 0.2s ease-in-out,
    -moz-box-shadow 0.2s ease-in-out;
}
.dyvix-button-blade:hover {
  border-left: 4px solid #ffffff;
  border-top: 4px solid #ffffff;
  box-shadow: -6px -6px 30px rgba(255, 255, 255, 0.1);
  -webkit-box-shadow: -6px -6px 30px rgba(255, 255, 255, 0.1);
  -moz-box-shadow: -6px -6px 30px rgba(255, 255, 255, 0.1);
}
.dyvix-button-blade:active {
  border: none;
  scale: 0.9;
  box-shadow: -6px -6px 30px rgba(255, 255, 255, 0.1);
  -webkit-box-shadow: -6px -6px 30px rgba(255, 255, 255, 0.1);
  -moz-box-shadow: -6px -6px 30px rgba(255, 255, 255, 0.1);
}
.dyvix-button-neon {
  background: #4deeea;
  background: radial-gradient(
    circle,
    rgba(77, 238, 234, 1) 0%,
    rgba(112, 186, 239, 1) 43%,
    rgba(240, 0, 255, 1) 100%
  );
  box-shadow: 0px 0px 20px 2px rgba(252, 46, 255, 0.4);
  border: none;
  color: white;
  font-weight: bold;
  border-radius: 4rem;

  transition:
    transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1),
    border-radius 0.2s ease,
    box-shadow 0.3s ease,
    background 0.3s ease;
}
.dyvix-button-neon:hover {
  border-radius: 2rem;
  transform: scale(1.02);
  background: #1c4241;
  background: radial-gradient(
    circle,
    rgba(112, 186, 239, 1) 0%,
    rgba(77, 238, 234, 1) 43%,
    rgba(240, 0, 255, 1) 90%
  );
  box-shadow: 0px 0px 56px 4px rgba(252, 61, 255, 1);
}
.dyvix-button-neon:active {
  background-color: #5eeeec;
  background: radial-gradient(
    circle,
    rgb(10, 152, 150) 0%,
    rgb(110, 167, 207) 43%,
    rgb(84, 4, 90) 100%
  );
  transform: scale(0.97);
}
/* ... */

